--- a/data/statapp.json
+++ b/data/statapp.json
@@ -2,7 +2,7 @@
     "teams": [{
         "standing": 1,
         "teams": [],
-        "name": "Barca",
+        "name": "chelsea",
         "points": 21
     }],
     "name": "Premier League"
